# WavToMP3Encoder

./: CMakeLists.txt  README.md  libmp3lame-static.lib
src/: ExtractWaveFile.hpp  LameEncoder.hpp  MP3FileWriter.hpp  WaveFileReader.hpp  main.cpp
